# atari

./: CMakeLists.txt  README.md  build.sh
libatari/: CMakeLists.txt  atr.c  atr.h  device.c  device.h  devide.c  display.c  display.h  dos2.c  dos2.h  dos2_format.c  dos3.c  dos3.h  drive1050.c  drive1050.h  filesystem.c  filesystem.h
unittest/: CMakeLists.txt  atr.c  copy_disk.c  dos2_disk_code.c  dos3_disk_code.c
